--- a/extension/style.css
+++ b/extension/style.css
@@ -1,70 +1,3 @@
-body {
-    background-color: #ffffff;
-}
-
-h1 {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 24px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    line-height: 26.399999618530273px;
-}
-
-h3 {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 100;
-    line-height: 15.399999618530273px;
-}
-
-th {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 1000;
-    line-height: 20px;
-}
-
-td {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    line-height: 20px;
-}
-
-p {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 1000;
-    line-height: 20px;
-}
-
-blockquote {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 21px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    line-height: 30px;
-}
-
-pre {
-    font-family: Geneva, Tahoma, Verdana, sans-serif;
-    font-size: 13px;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    line-height: 18.571430206298828px;
-}
-
 .entities {
     line-height: 2;
 }
@@ -202,100 +135,12 @@ pre {
     color: white;
 }
 
-/* Sticky Sidebar */
-.chatbot {
-    position: fixed;
-    width: 300px;
-    height: 400px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    z-index: 999;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    font-family: sans-serif;
-    bottom: 100px;
-    right: 50px; 
-    display: none;
-}
-.chatbot-open {
-    position: fixed;
-    bottom: 20px;
-    right: 50px; /* Change this value to move the button to the right */
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px;
-    border-radius: 50%;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
+
+.hover-img {
+    position: relative;
+    display: inline-block;
 }
 
-.chatbot-open:hover {
-    background-color: #0069d9;
-}
-
-.chatbot-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #f0f0f0;
-    padding: 10px;
-}
-
-.chatbot-header h2 {
-    margin: 0;
-}
-
-.chatbot-close {
-    border: none;
-    background-color: transparent;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.chatbot-close:hover {
-    color: #f00;
-}
-
-.chatbot-body {
-    padding: 10px;
-    height: 300px;
-    overflow-y: auto;
-}
-
-.chatbot-footer {
-    display: flex;
-    align-items: center;
-    padding: 5px;
-}
-
-.chatbot-footer input[type="text"] {
-    flex: 1;
-    margin-right: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-
-.chatbot-send {
-    border: none;
-    background-color: #007bff;
-    color: #fff;
-    padding: 5px 10px;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.chatbot-send:hover {
-    background-color: #0069d9;
-}
-
-@media screen and (max-width: 600px) {
-    .chatbot {
-        width: 100%;
-        height: 350px;
-        left: 0;
-    }
-
-    .chatbot-header {
-        font-size: 18px;
-    }
+.hover-img:hover .img-overlay {
+    display: block;
 }
